# cgra_pnr

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  Makefile  README.md  analyzer.py  arch.py  bitstream.py  cgra.py  example  install.sh  metapath2vec.cpp  new_router.py  packer.py  parser.py  place.py  place.sh  place_benchmark.py  place_sa.py  process_graph.py  process_layout.py  random_walk.py  requirements.txt  router.py  sa.py  util.py  visualize.py
.github/workflows/: linux-deploy.yml  macos-deploy.yml  macos-deploy.yml.skip  macos.yml  macos.yml.skip
anneal/: __init__.py  anneal.py  cluster.py  detailed.py  mbcluster.py
arch/: __init__.py  arch.py  bookshelf.py  cgra.py  cgra_analytics.py  cgra_info.py  cgra_packer.py  cgra_route.py  cgra_timing.py  fpga.py  kernel.py  netlist.py  parser.py
arch/graph/: __init__.py  draw_graph.py  kernel_extract.py
benchmark/: clean_cluster.py  compute_hpwl.py  compute_mock_arch_stat.py  compute_netlist_stats.py  init_placement.py
coreir_fix/: README.md  fix_all.sh  fix_const.py  fix_mux.py  fix_smax.py
cyclone/: .gitignore  .travis.sh  CMakeLists.txt  MANIFEST.in  README.md  README.rst  example.cc  setup.py  test.cc
cyclone/example/: CMakeLists.txt  example1.cc  example1.py  example2.cc  example2.py  example3.cc  router.cc
cyclone/python/: CMakeLists.txt  cyclone.cc  router
cyclone/src/: global.cc  global.hh  graph.cc  graph.hh  io.cc  io.hh  layout.cc  layout.hh  net.cc  net.hh  route.cc  route.hh  thunder_io.cc  thunder_io.hh  timing.cc  timing.hh  util.cc  util.hh
docs/: conf.py  index.rst
docs/cyclone/: index.rst
docs/thunder/: index.rst  install.rst  usage.rst
graph/: __init__.py  community.py  kernel_extract.py
mock/: README.md  generate_hardware.py  generate_netlist.py
placer/: __init__.py  analytical.py  anneal.py  cluster.py  detailed.py  hybrid.py  mbcluster.py  util.py
scripts/: bitstream.sh  ci.sh  deploy.sh  deploy_sls.sh  place.sh  pnr_flow.sh  route.sh
simanneal/: anneal.py
tests/: test_partition.py  test_pnr.py
tests/vectors/gaussian/: 1.graph  16.graph  design.layout  design.packed
tests/vectors/harris/: design.packed
tests/vectors/partition-1/: 16.graph  design.packed
tests/vectors/partition-2/: 1.graph  design.layout  design.packed  design.part
tests/vectors/partition-3/: design.packed  design.part
thunder/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.rst  setup.py  test.cc
thunder/example/: CMakeLists.txt  example1.cc  example2.cc  example3.cc  example3.py  partition.cc  placer.cc  util.hh
thunder/python/: CMakeLists.txt  partition  placer  thunder.cc
thunder/src/: anneal.cc  anneal.hh  detailed.cc  detailed.hh  global.cc  global.hh  graph.cc  graph.hh  io.cc  io.hh  layout.cc  layout.hh  multi_place.cc  multi_place.hh  util.cc  util.hh  vpr.cc  vpr.hh
thunder/src/include/: randutils.hpp  spline.h  tqdm.h
